--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = d1minipro
+
 [env:teensy31]
 platform = teensy
 board = teensy31
 framework = arduino
 
+[env:d1minipro]
+platform = espressif8266
+board = d1_mini_pro
+framework = arduino
